refactor: whisper servers

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 # specify the ASR、LLM and TTS server to use
-# options: openai, gemini, tencent, volcengine, whisper, vosk, llm8850whisper, faster-whisper
+# options: openai, gemini, tencent, volcengine, whisper, whisper-http, vosk, llm8850whisper, faster-whisper
 ASR_SERVER=openai
 
 # options: openai, gemini, grok, volcengine, ollama, llm8850
@@ -151,15 +151,15 @@ PIPER_HTTP_LENGTH_SCALE=1
 # unzip the model to a folder and set the path below
 VOSK_MODEL_PATH=/path/to/vosk/model
 
-## Whisper ASR
-# if you are using whisper as ASR server, please set the following environment variables
-# Whisper is an open-source ASR engine that can run locally on your device
+## Whisper ASR & Whisper HTTP Server
+# Whisper is an open-source ASR engine that can run locally on your device, whisper-http is a lightweight HTTP server wrapper for whisper
 # https://github.com/openai/whisper
 # the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. The tiny model will take ~1GB of VRAM
-WHISPER_MODEL_SIZE=tiny
+# the downloaded models will be stored in ~/.cache/whisper by default, if you want to use http server in offline mode, you should specify a local model checkpoint path here
+WHISPER_MODEL_SIZE_OR_PATH=/home/pi/.cache/whisper/tiny.pt
 # the default language is English, if you leave it empty, whisper will try to detect the language automatically, but it will take more time.
 # WHISPER_LANGUAGE=English
-# the default port for whisper ASR server is host at localhost:8804, you can change it if you are running remote whisper server
+# the default port for whisper-http server is host at localhost:8804, you can change it if you are running remote whisper server
 # WHISPER_PORT=8804
 # WHISPER_HOST=localhost
 # the default request type is filePath, you can also choose "base64" to send audio data in base64 format, it should be set to "base64" if you are using remote whisper server
@@ -173,6 +173,7 @@ FASTER_WHISPER_HOST=localhost
 # FASTER_WHISPER_REQUEST_TYPE=filePath
 # the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large.
 # or you can specify a local model directory path if you want it fully offline. (It will validate the model from huggingface if you just provide a size name)
+# The path should contain the model files like: model.bin, config.json, etc.
 FASTER_WHISPER_MODEL_SIZE_OR_PATH=/path/to/your/faster-whisper-model-directory
 # the default language is English, if you leave it empty, faster-whisper will try to detect the language automatically, but it will take more time.
 # FASTER_WHISPER_LANGUAGE=en
