fix: faster-whisper host

--- a/.env.template
+++ b/.env.template
@@ -155,10 +155,10 @@ VOSK_MODEL_PATH=/path/to/vosk/model
 # Whisper is an open-source ASR engine that can run locally on your device, whisper-http is a lightweight HTTP server wrapper for whisper
 # https://github.com/openai/whisper
 # the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. The tiny model will take ~1GB of VRAM
-# the downloaded models will be stored in ~/.cache/whisper by default, if you want to use http server in offline mode, you should specify a local model checkpoint path here
+# the downloaded models will be stored in ~/.cache/whisper by default, if you want to use http server in offline mode, you can also specify a local model checkpoint path here to ensure the model is loaded from local disk directly.
 WHISPER_MODEL_SIZE_OR_PATH=/home/pi/.cache/whisper/tiny.pt
 # the default language is English, if you leave it empty, whisper will try to detect the language automatically, but it will take more time.
-# WHISPER_LANGUAGE=English
+WHISPER_LANGUAGE=English
 # the default port for whisper-http server is host at localhost:8804, you can change it if you are running remote whisper server
 # WHISPER_PORT=8804
 # WHISPER_HOST=localhost
@@ -171,8 +171,8 @@ WHISPER_MODEL_SIZE_OR_PATH=/home/pi/.cache/whisper/tiny.pt
 FASTER_WHISPER_PORT=8803
 FASTER_WHISPER_HOST=localhost
 # FASTER_WHISPER_REQUEST_TYPE=filePath
-# the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large.
-# or you can specify a local model directory path if you want it fully offline. (It will validate the model from huggingface if you just provide a size name)
+# the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. (It will validate the model from huggingface if you just provide a size name)
+# or you can specify a local model directory path if you want it fully offline. 
 # The path should contain the model files like: model.bin, config.json, etc.
 FASTER_WHISPER_MODEL_SIZE_OR_PATH=/path/to/your/faster-whisper-model-directory
 # the default language is English, if you leave it empty, faster-whisper will try to detect the language automatically, but it will take more time.
