--- a/.env.template
+++ b/.env.template
@@ -109,6 +109,8 @@ OLLAMA_ENDPOINT=http://localhost:11434
 # OLLAMA_MODEL=deepseek-r1:1.5b
 # if you want to enable tools for ollama, uncomment the following line (make sure the model supports tools, otherwise it will return a 400 error):
 # OLLAMA_ENABLE_TOOLS=true
+# specify the maximum number of tokens to predict for ollama, default is unlimited
+# OLLAMA_PREDICT_NUM=128
 # if the ollama server is running on the same device, you can choose to serve ollama automatically when starting the chatbot, uncomment the following line:
 # SERVE_OLLAMA=true
 # if you are using ollama as VISION_SERVER, specify the vision model for ollama image understanding tasks, default is qwen3-vl:2b
