feat: whisper asr compatible

--- a/.env.template
+++ b/.env.template
@@ -159,6 +159,8 @@ VOSK_MODEL_PATH=/path/to/vosk/model
 # the default model size is tiny, you can also choose other model sizes: tiny, base, small, medium, large. The tiny model will take ~1GB of VRAM
 # the downloaded models will be stored in ~/.cache/whisper by default, if you want to use http server in offline mode, you can also specify a local model checkpoint path here to ensure the model is loaded from local disk directly.
 WHISPER_MODEL_SIZE_OR_PATH=/home/pi/.cache/whisper/tiny.pt
+# ***Decreptated*** variable, please use WHISPER_MODEL_SIZE_OR_PATH instead
+# WHISPER_MODEL_SIZE=tiny
 # the default language is English, if you leave it empty, whisper will try to detect the language automatically, but it will take more time.
 WHISPER_LANGUAGE=English
 # the default port for whisper-http server is host at localhost:8804, you can change it if you are running remote whisper server
