--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^6.3.1",
     "@google/genai": "1.25.0",
+    "@qdrant/js-client-rest": "^1.16.2",
     "axios": "^1.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
