feat: chat with knowledge

--- a/.env.template
+++ b/.env.template
@@ -201,3 +201,7 @@ LLM8850_MELOTTS_HOST=http://localhost:8802
 # specify the initial volume level (0-127) when the chatbot starts
 # value mapped to ALSA volume levels # 60% = 114  80% = 121  90% = 127
 # INITIAL_VOLUME_LEVEL=114
+
+## RAG Settings
+# Enable RAG (Retrieval-Augmented Generation) by setting the following variable to true
+# ENABLE_RAG=true
