--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/index.js",
+    "index-knowledge": "node -r ts-node/register -r tsconfig-paths/register dist/index_knowledge.js",
     "postinstall": "patch-package",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
