feat: RAG support

--- a/.env.template
+++ b/.env.template
@@ -20,6 +20,15 @@ IMAGE_GENERATION_SERVER=openai
 # if you want to enable the Pi Camera for image capture (double click the button in idle status to enter) uncomment the following line:
 # ENABLE_CAMERA=true
 
+## RAG Settings
+# Enable RAG (Retrieval-Augmented Generation) by setting the following variable to true
+# ENABLE_RAG=true
+# specify the embedding server and vector database server to use for RAG
+# options for EMBEDDING_SERVER: ollama
+# EMBEDDING_SERVER=ollama
+# options for VECTOR_DB_SERVER: qdrant
+# VECTOR_DB_SERVER=qdrant
+
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
 
@@ -117,6 +126,11 @@ OLLAMA_ENDPOINT=http://localhost:11434
 # please refer to https://ollama.com/library for more details
 # OLLAMA_VISION_MODEL=qwen3-vl:2b
 
+## Ollama embedding server settings for RAG, if embedding endpoint is not set, it will use OLLAMA_ENDPOINT by default
+# OLLAMA_EMBEDDING_ENDPOINT=http://localhost:11434
+# specify the embedding model for ollama embedding server, default is nomic-embed-text
+# OLLAMA_EMBEDDING_MODEL=nomic-embed-text
+
 ## Proxy Settings
 # proxy settings for all cloud api request, uncomment the following lines if you need to use a proxy to access the internet
 # usually you only need to set HTTPS_PROXY
@@ -202,6 +216,6 @@ LLM8850_MELOTTS_HOST=http://localhost:8802
 # value mapped to ALSA volume levels # 60% = 114  80% = 121  90% = 127
 # INITIAL_VOLUME_LEVEL=114
 
-## RAG Settings
-# Enable RAG (Retrieval-Augmented Generation) by setting the following variable to true
-# ENABLE_RAG=true
+## Qdrant for RAG Vector Database
+# if you are using Qdrant as the vector database server for RAG, please set the following environment variables, the default host is http://localhost:6333
+# QDRANT_HOST=http://localhost:6333
