--- a/.env.template
+++ b/.env.template
@@ -23,11 +23,14 @@ IMAGE_GENERATION_SERVER=openai
 ## RAG Settings
 # Enable RAG (Retrieval-Augmented Generation) by setting the following variable to true
 # ENABLE_RAG=true
-# specify the embedding server and vector database server to use for RAG
+# specify the embedding server and vector database server to use for RAG, default embedding server is ollama
 # options for EMBEDDING_SERVER: ollama
 # EMBEDDING_SERVER=ollama
+# specify the vector database server to use for RAG, default vector database server is qdrant
 # options for VECTOR_DB_SERVER: qdrant
 # VECTOR_DB_SERVER=qdrant
+# knowledge score threshold for RAG, default is 0.65, score range is 0.0 - 1.0, under this threshold will be considered as no relevant knowledge found
+# RAG_KNOWLEDGE_SCORE_THRESHOLD=0.65
 
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
