feat: knowledge summary

--- a/.env.template
+++ b/.env.template
@@ -31,6 +31,10 @@ IMAGE_GENERATION_SERVER=openai
 # VECTOR_DB_SERVER=qdrant
 # knowledge score threshold for RAG, default is 0.65, score range is 0.0 - 1.0, under this threshold will be considered as no relevant knowledge found
 # RAG_KNOWLEDGE_SCORE_THRESHOLD=0.65
+# enable knowledge summary generation when creating knowledge base, default is false. If it is enabled, each knowledge chunk will be summarized using LLM_SERVER before being stored in the vector database.
+# ENABLE_KNOWLEDGE_SUMMARY=true
+# specify the prompt prefix for knowledge summary generation
+# RAG_KNOWLEDGE_SUMMARY_PROMPT_PREFIX="Please provide a concise summary for the following text in **30 words** or less:"
 
 # specify the chat history reset time in seconds, default is 5 minutes (300 seconds)
 # CHAT_HISTORY_RESET_TIME=300
